* ../../configure.in: Delete powerpcle-*-winnt* and powerpcle-*-pe|powerpcle-*-cygwin*. * ../../configure: Regenerated. * cygwin.h: Delete. * rs6000.h (OBJECT_WINDOWS_NT): Delete. (TARGET_WINDOWS_NT): Delete. (ABI_NT): Delete. (CALL_NT_DLLIMPORT): Delete. Delete NT-specific code. * rs6000.md, rs6000.c, sysv4.h: Delete NT-specific code. * win-nt.h: Delete. * t-winnt: Delete. * nt-ci.asm: Delete. * nt-cn.asm: Delete. * ntstack.asm: Delete.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31678 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,21 @@
+2000-01-28  Geoff Keating  <geoffk@cygnus.com>
+
+	* ../../configure.in: Delete powerpcle-*-winnt*
+	and powerpcle-*-pe|powerpcle-*-cygwin*.
+	* ../../configure: Regenerated.
+	* cygwin.h: Delete.
+	* rs6000.h (OBJECT_WINDOWS_NT): Delete.
+	(TARGET_WINDOWS_NT): Delete.
+	(ABI_NT): Delete.
+	(CALL_NT_DLLIMPORT): Delete.
+	Delete NT-specific code.
+	* rs6000.md, rs6000.c, sysv4.h: Delete NT-specific code.
+	* win-nt.h: Delete.
+	* t-winnt: Delete.
+	* nt-ci.asm: Delete.
+	* nt-cn.asm: Delete.
+	* ntstack.asm: Delete.
+
 2000-01-27  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* rs6000.h (SELECT_RTX_SECTION): Move to aix.h.
