--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -27,7 +27,6 @@
 ;; 0/v		blockage
 ;; 1/v		nonlocal_goto_receiver for MINIMAL_TOC
 ;; 6		address of a word pointing to the TOC
-;; 7		clobber SP for NT
 ;; 7		address of the TOC (more-or-less)
 ;; 8		movsi_got
 ;; 10		fctiwz
@@ -5902,9 +5901,9 @@
     {
       rtx target = (no_new_pseudos ? operands[0] : gen_reg_rtx (SImode));
 
-      /* If this is a function address on -mcall-aixdesc or -mcall-nt,
+      /* If this is a function address on -mcall-aixdesc,
 	 convert it to the address of the descriptor.  */
-      if ((DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_NT)
+      if (DEFAULT_ABI == ABI_AIX
 	  && GET_CODE (operands[1]) == SYMBOL_REF
 	  && XSTR (operands[1], 0)[0] == '.')
 	{
@@ -5925,31 +5924,7 @@
       DONE;
     }
 
-  if (GET_CODE (operands[1]) == CONST
-      && DEFAULT_ABI == ABI_NT
-      && ! side_effects_p (operands[0]))
-    {
-      rtx const_term = const0_rtx;
-      rtx sym = eliminate_constant_term (XEXP (operands[1], 0), &const_term);
-      if (sym && GET_CODE (const_term) == CONST_INT
-	  && (GET_CODE (sym) == SYMBOL_REF || GET_CODE (sym) == LABEL_REF))
-	{
-	  unsigned HOST_WIDE_INT value = INTVAL (const_term);
-	  int new_reg_p = (flag_expensive_optimizations && ! no_new_pseudos);
-	  rtx tmp1 = ((new_reg_p && value != 0)
-		      ? gen_reg_rtx (SImode) : operands[0]);
-
-	  emit_insn (gen_movsi (tmp1, sym));
-	  if (INTVAL (const_term) != 0)
-	    emit_insn (gen_addsi3 (operands[0], tmp1, GEN_INT (value)));
-	  DONE;
-	}
-      else
-	rs6000_fatal_bad_address (operands[1]);
-    }
-
-  if ((! TARGET_WINDOWS_NT || DEFAULT_ABI != ABI_NT)
-      && CONSTANT_P (operands[1])
+  if (CONSTANT_P (operands[1])
       && GET_CODE (operands[1]) != CONST_INT
       && GET_CODE (operands[1]) != HIGH
       && ! LEGITIMATE_CONSTANT_POOL_ADDRESS_P (operands[1]))
@@ -7783,21 +7758,6 @@
       emit_insn (gen_cond_trap (LTU, available, operands[1], const0_rtx));
     }
 
-  /* Under Windows NT, we need to add stack probes for large/variable
-     allocations, so do it via a call to the external function alloca
-     instead of doing it inline.  */
-  if (DEFAULT_ABI == ABI_NT
-      && (GET_CODE (operands[1]) != CONST_INT || INTVAL (operands[1]) > 4096))
-    {
-      rtx tmp = gen_reg_rtx (Pmode);
-      emit_library_call_value (gen_rtx_SYMBOL_REF (Pmode,
-					\"__allocate_stack\"),
-			       tmp, 0, Pmode, 1, operands[1], Pmode);
-      emit_insn (gen_set_sp (tmp));
-      emit_move_insn (operands[0], tmp);
-      DONE;
-    }
-
   if (GET_CODE (operands[1]) != CONST_INT
       || INTVAL (operands[1]) < -32767
       || INTVAL (operands[1]) > 32768)
@@ -7825,16 +7785,6 @@
   emit_move_insn (operands[0], virtual_stack_dynamic_rtx);
   DONE;
 }")
-
-;; Marker to indicate that the stack pointer was changed under NT in
-;; ways not known to the compiler
-
-(define_insn "set_sp"
-  [(set (reg:SI 1)
-	(unspec:SI [(match_operand:SI 0 "register_operand" "r")] 7))]
-  ""
-  ""
-  [(set_attr "length" "0")])
 
 ;; These patterns say how to save and restore the stack pointer.  We need not
 ;; save the stack pointer at function level since we are careful to
@@ -8085,49 +8035,6 @@
   [(set_attr "type" "load")
    (set_attr "length" "28")])
 
-;; A function pointer undef NT is a pointer to a data area whose first word
-;; contains the actual address of the function, whose second word contains a
-;; pointer to its TOC.  The static chain is not stored under NT, which means
-;; that we need a trampoline.
-;;
-;; operands[0] is an SImode pseudo in which we place the address of the function.
-;; operands[1] is the stack size to clean up
-;; operands[2] is the value FUNCTION_ARG returns for the VOID argument (must be 0 for NT)
-;; operands[3] is location to store the TOC
-;; operands[4] is the TOC register
-;;
-;; We do not break this into separate insns, so that the scheduler will not try
-;; to move the load of the new TOC before any loads from the TOC.
-
-(define_insn "call_indirect_nt"
-  [(call (mem:SI (match_operand:SI 0 "gpc_reg_operand" "b"))
-	 (match_operand 1 "const_int_operand" "n"))
-   (use (match_operand 2 "const_int_operand" "n"))
-   (use (match_operand 3 "offsettable_mem_operand" "o"))
-   (use (match_operand 4 "gpc_reg_operand" "r"))
-   (clobber (match_scratch:SI 5 "=&r"))
-   (clobber (match_scratch:SI 6 "=l"))]
-  "DEFAULT_ABI == ABI_NT
-   && (INTVAL (operands[2]) == CALL_NORMAL || (INTVAL (operands[2]) & CALL_LONG) != 0)"
-  "{st|stw} %4,%a3\;{l|lwz} %5,0(%0)\;{l|lwz} %4,4(%0)\;mt%6 %5\;{brl|blrl}\;{l|lwz} %4,%a3"
-  [(set_attr "type" "load")
-   (set_attr "length" "24")])
-
-(define_insn "call_value_indirect_nt"
-  [(set (match_operand 0 "" "")
-	(call (mem:SI (match_operand:SI 1 "gpc_reg_operand" "b"))
-	      (match_operand 2 "const_int_operand" "n")))
-   (use (match_operand 3 "const_int_operand" "n"))
-   (use (match_operand 4 "offsettable_mem_operand" "o"))
-   (use (match_operand 5 "gpc_reg_operand" "r"))
-   (clobber (match_scratch:SI 6 "=&r"))
-   (clobber (match_scratch:SI 7 "=l"))]
-  "DEFAULT_ABI == ABI_NT
-   && (INTVAL (operands[3]) == CALL_NORMAL || (INTVAL (operands[3]) & CALL_LONG) != 0)"
-  "{st|stw} %5,%a4\;{l|lwz} %6,0(%1)\;{l|lwz} %5,4(%1)\;mt%7 %6\;{brl|blrl}\;{l|lwz} %5,%a4"
-  [(set_attr "type" "load")
-   (set_attr "length" "24")])
-
 ;; A function pointer under System V is just a normal pointer
 ;; operands[0] is the function pointer
 ;; operands[1] is the stack size to clean up
@@ -8186,14 +8093,6 @@
 
   operands[0] = XEXP (operands[0], 0);
 
-  /* Convert NT DLL imports into an indirect call.  */
-  if (GET_CODE (operands[0]) == SYMBOL_REF
-      && (INTVAL (operands[2]) & CALL_NT_DLLIMPORT) != 0)
-    {
-      operands[0] = rs6000_dll_import_ref (operands[0]);
-      operands[2] = GEN_INT ((int)CALL_NORMAL);
-    }
-
   if (GET_CODE (operands[0]) != SYMBOL_REF
       || (INTVAL (operands[2]) & CALL_LONG) != 0)
     {
@@ -8221,13 +8120,6 @@
 						         operands[1], operands[2],
 						         toc_addr, toc_reg, static_chain));
 	    }
-	  else if (DEFAULT_ABI == ABI_NT)
-	    {
-	      /* NT function pointers are really pointers to a two word area */
-	      emit_call_insn (gen_call_indirect_nt (force_reg (Pmode, operands[0]),
-						    operands[1], operands[2],
-						    toc_addr, toc_reg));
-	    }
 	  else
 	    abort ();
 	}
@@ -8248,14 +8140,6 @@
     abort ();
 
   operands[1] = XEXP (operands[1], 0);
-
-  /* Convert NT DLL imports into an indirect call.  */
-  if (GET_CODE (operands[1]) == SYMBOL_REF
-      && (INTVAL (operands[3]) & CALL_NT_DLLIMPORT) != 0)
-    {
-      operands[1] = rs6000_dll_import_ref (operands[1]);
-      operands[3] = GEN_INT ((int)CALL_NORMAL);
-    }
 
   if (GET_CODE (operands[1]) != SYMBOL_REF
       || (INTVAL (operands[3]) & CALL_LONG) != 0)
@@ -8285,14 +8169,6 @@
 							       force_reg (Pmode, operands[1]),
 							       operands[2], operands[3],
 							       toc_addr, toc_reg, static_chain));
-	    }
-	  else if (DEFAULT_ABI == ABI_NT)
-	    {
-	      /* NT function pointers are really pointers to a two word area */
-	      emit_call_insn (gen_call_value_indirect_nt (operands[0],
-							  force_reg (Pmode, operands[1]),
-							  operands[2], operands[3],
-							  toc_addr, toc_reg));
 	    }
 	  else
 	    abort ();
@@ -8398,7 +8274,7 @@
 	 (match_operand 1 "" "fg,fg"))
    (use (match_operand:SI 2 "immediate_operand" "O,n"))
    (clobber (match_scratch:SI 3 "=l,l"))]
-  "(DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_NT)
+  "DEFAULT_ABI == ABI_AIX
    && (INTVAL (operands[2]) & CALL_LONG) == 0"
   "*
 {
@@ -8412,7 +8288,7 @@
   else if (INTVAL (operands[2]) & CALL_V4_CLEAR_FP_ARGS)
     output_asm_insn (\"creqv 6,6,6\", operands);
 
-  return (TARGET_WINDOWS_NT) ? \"bl %z0\;.znop %z0\" : \"bl %z0\;%.\";
+  return \"bl %z0\;%.\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "8,12")])
@@ -8422,7 +8298,8 @@
 	 (match_operand 1 "" "fg,fg"))
    (use (match_operand:SI 2 "immediate_operand" "O,n"))
    (clobber (match_scratch:SI 3 "=l,l"))]
-  "TARGET_64BIT && (DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_NT)
+  "TARGET_64BIT 
+   && DEFAULT_ABI == ABI_AIX
    && (INTVAL (operands[2]) & CALL_LONG) == 0"
   "*
 {
@@ -8436,7 +8313,7 @@
   else if (INTVAL (operands[2]) & CALL_V4_CLEAR_FP_ARGS)
     output_asm_insn (\"creqv 6,6,6\", operands);
 
-  return (TARGET_WINDOWS_NT) ? \"bl %z0\;.znop %z0\" : \"bl %z0\;%.\";
+  return \"bl %z0\;%.\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "8,12")])
@@ -8471,7 +8348,7 @@
 	      (match_operand 2 "" "fg,fg")))
    (use (match_operand:SI 3 "immediate_operand" "O,n"))
    (clobber (match_scratch:SI 4 "=l,l"))]
-  "(DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_NT)
+  "DEFAULT_ABI == ABI_AIX
    && (INTVAL (operands[3]) & CALL_LONG) == 0"
   "*
 {
@@ -8485,7 +8362,7 @@
   else if (INTVAL (operands[3]) & CALL_V4_CLEAR_FP_ARGS)
     output_asm_insn (\"creqv 6,6,6\", operands);
 
-  return (TARGET_WINDOWS_NT) ? \"bl %z1\;.znop %z1\" : \"bl %z1\;%.\";
+  return \"bl %z1\;%.\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "8,12")])
@@ -8496,7 +8373,8 @@
 	      (match_operand 2 "" "fg,fg")))
    (use (match_operand:SI 3 "immediate_operand" "O,n"))
    (clobber (match_scratch:SI 4 "=l,l"))]
-  "TARGET_64BIT && (DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_NT)
+  "TARGET_64BIT 
+   && DEFAULT_ABI == ABI_AIX
    && (INTVAL (operands[3]) & CALL_LONG) == 0"
   "*
 {
@@ -8510,7 +8388,7 @@
   else if (INTVAL (operands[3]) & CALL_V4_CLEAR_FP_ARGS)
     output_asm_insn (\"creqv 6,6,6\", operands);
 
-  return (TARGET_WINDOWS_NT) ? \"bl %z1\;.znop %z1\" : \"bl %z1\;%.\";
+  return \"bl %z1\;%.\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "8,12")])
