* rs6000.h (ASM_OUTPUT_DEF_FROM_DECLS): New macro.
* rs6000.md (stmw): Use the right POWER opcode.
(lmw): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31722 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,10 @@
+2000-01-31  Geoff Keating  <geoffk@cygnus.com>
+
+	* rs6000.h (ASM_OUTPUT_DEF_FROM_DECLS): New macro.
+
+	* rs6000.md (stmw): Use the right POWER opcode.
+	(lmw): Likewise.
+
 2000-01-31  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* rs6000-protos.h: New file.
