Fix bug generating epilogue for tpcs-frame
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31723 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -2,6 +2,8 @@
 
 	* config/arm/arm.c (output_thumb_prologue): Fix bug generating
 	thumb stack frame.
+	(thumb_exit): Move frame pointer back into hard frame pointer
+	register if backtracing is being used.
 
 2000-01-13  Richard Earnshaw (rearnsha@arm.com)
 
