--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-02-02  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/thumb.c (thumb_exit): Additional fix for same bug.
+
+	* config/arm/arm.md (epilogue): Fix rtl checking abort because
+	(return) was emited using an emit_insn() call. 
+	
 2000-01-31  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (output_thumb_prologue): Fix bug generating
