--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -30,6 +30,7 @@
 ;; 6		address of a word pointing to the TOC
 ;; 7		address of the TOC (more-or-less)
 ;; 8		movsi_got
+;; 9/v		eh_reg_restore
 ;; 10		fctiwz
 ;; 19		movesi_from_cr
 ;; 20		movesi_to_cr
@@ -11166,3 +11167,118 @@
 			(match_operand:DF 4 "memory_operand" "m"))])]
  "TARGET_64BIT"
  "b %z2")
+
+; This is used in compiling the routines __throw and __rethrow.
+; It's a little different to the usual definition...
+
+(define_expand "eh_epilogue"
+  [(use (match_operand 0 "general_operand" "r"))
+   (use (match_operand 1 "general_operand" "r"))
+   (use (match_operand 2 "general_operand" "c"))]
+  ""
+  "
+{
+  rtx stack_reg = gen_rtx_REG (Pmode, STACK_POINTER_REGNUM);
+  rtx insn;
+
+  /* This is required for binary compatibility.  If it's wrong,
+     it probably means that eh_regs() in except.c is broken.  */
+  if (GET_CODE (operands[0]) != REG || REGNO (operands[0]) != 3)
+    abort();
+
+  /* These can be anything that doesn't interfere with the epilogue.  */
+  if (GET_CODE (operands[1]) != REG || REGNO (operands[1]) != 4)
+    {
+      rtx r = gen_rtx_REG (Pmode, 4);
+      emit_move_insn (r, operands[1]);
+      operands[1] = r;
+    }
+
+  if (GET_CODE (operands[2]) != REG 
+	|| REGNO (operands[2]) != COUNT_REGISTER_REGNUM)
+    {
+      rtx r = gen_rtx_REG (Pmode, COUNT_REGISTER_REGNUM);
+      emit_move_insn (r, operands[2]);
+      operands[2] = r;
+    }
+
+  emit_insn (gen_eh_reg_restore ());
+
+  if (Pmode == SImode)
+    emit_insn (gen_addsi3 (stack_reg, stack_reg, operands[1]));
+  else
+    emit_insn (gen_adddi3 (stack_reg, stack_reg, operands[1]));
+  
+  if (Pmode == SImode)
+    insn = emit_jump_insn (gen_return_eh_si (operands[2]));
+  else
+    insn = emit_jump_insn (gen_return_eh_di (operands[2]));
+  emit_barrier_after (insn);
+
+  DONE;
+}")
+
+; We can't expand this before we know which registers are restored,
+; but we do want to expand it before flow2 because that way flow2 can
+; remove the redundant loads of the link register.
+(define_expand "eh_reg_restore"
+  [(unspec_volatile [(const_int 0)] 9)]
+  ""
+  "")
+
+(define_split
+  [(unspec_volatile [(const_int 0)] 9)]
+  "reload_completed && TARGET_SCHED_PROLOG"
+  [(unspec_volatile [(const_int 0)] 9)]
+  "
+{
+  rs6000_emit_epilogue (TRUE);
+  DONE;
+}")
+
+(define_insn ""
+  [(unspec_volatile [(const_int 0)] 9)]
+  ""
+  "*
+{
+  if (TARGET_SCHED_PROLOG)
+    return \"#\";
+
+  /* This is slightly ugly, but at least we don't have multiple
+     copies of the epilogue-emitting code.  */
+  start_sequence ();
+
+  /* A NOTE_INSN_DELETED is supposed to be at the start
+     and end of the \"toplevel\" insn chain.  */
+  emit_note (0, NOTE_INSN_DELETED);
+  rs6000_emit_epilogue (TRUE);
+  emit_note (0, NOTE_INSN_DELETED);
+
+  if (TARGET_DEBUG_STACK)
+    debug_rtx_list (get_insns(), 100);
+  final (get_insns(), asm_out_file, FALSE, FALSE);
+  end_sequence ();
+  return \"\";
+}")
+
+
+(define_insn "return_eh_si"
+  [(use (match_operand:SI 0 "register_operand" "l,c"))
+   (return)
+   (use (reg:SI 3))]
+  "TARGET_32BIT"
+  "@
+   {br|blr}
+   bctr"
+  [(set_attr "type" "jmpreg")])
+
+(define_insn "return_eh_di"
+  [(use (match_operand:DI 0 "register_operand" "l,c"))
+   (return)
+   (use (reg:DI 3))]
+  "TARGET_64BIT"
+  "@
+   {br|blr}
+   bctr"
+  [(set_attr "type" "jmpreg")])
+
