Imported from mainline sources
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31863 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-09  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/linux-oldld.h: Imported from mainline sources.
+
 2000-02-07  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/lib1funcs.asm: Merge in thumb functions from
