--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -5929,7 +5929,8 @@
   if (CONSTANT_P (operands[1])
       && GET_CODE (operands[1]) != CONST_INT
       && GET_CODE (operands[1]) != HIGH
-      && ! LEGITIMATE_CONSTANT_POOL_ADDRESS_P (operands[1]))
+      && ! LEGITIMATE_CONSTANT_POOL_ADDRESS_P (operands[1])
+      && ! TOC_RELATIVE_EXPR_P (operands[1]))
     {
       /* Emit a USE operation so that the constant isn't deleted if
 	 expensive optimizations are turned on because nobody
@@ -5960,11 +5961,28 @@
 	}
 
       operands[1] = force_const_mem (SImode, operands[1]);
+
+      if (TARGET_TOC && CONSTANT_POOL_EXPR_P (XEXP (operands[1], 0)))
+	{
+	  XEXP (operands[1], 0) = create_TOC_reference (XEXP (operands[1], 0));
+	  MEM_ALIAS_SET (operands[1]) = get_TOC_alias_set ();	
+	  RTX_UNCHANGING_P (operands[1]) = 1;
+	}
+
       if (! memory_address_p (SImode, XEXP (operands[1], 0))
 	  && ! reload_in_progress)
 	operands[1] = change_address (operands[1], SImode,
 				      XEXP (operands[1], 0));
     }
+  if (TARGET_TOC 
+     && GET_CODE (operands[1]) == MEM 
+     && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF)
+    {
+      XEXP (operands[1], 0) = create_TOC_reference (XEXP (operands[1], 0));
+      MEM_ALIAS_SET (operands[1]) = get_TOC_alias_set ();	
+      RTX_UNCHANGING_P (operands[1]) = 1;
+    }
+
 }")
 
 (define_insn ""
@@ -6530,7 +6548,8 @@
       && GET_CODE (operands[1]) != CONST_INT
 #endif
       && ! easy_fp_constant (operands[1], DImode)
-      && ! LEGITIMATE_CONSTANT_POOL_ADDRESS_P (operands[1]))
+      && ! LEGITIMATE_CONSTANT_POOL_ADDRESS_P (operands[1])
+      && ! TOC_RELATIVE_EXPR_P (operands[1]))
     {
       /* Emit a USE operation so that the constant isn't deleted if
 	 expensive optimizations are turned on because nobody
@@ -6561,11 +6580,27 @@
 	}
 
       operands[1] = force_const_mem (DImode, operands[1]);
+      if (TARGET_TOC && CONSTANT_POOL_EXPR_P (XEXP (operands[1], 0)))
+	{
+	  XEXP (operands[1], 0) = create_TOC_reference (XEXP (operands[1], 0));
+	  MEM_ALIAS_SET (operands[1]) = get_TOC_alias_set ();	
+	  RTX_UNCHANGING_P (operands[1]) = 1;
+	}	
       if (! memory_address_p (DImode, XEXP (operands[1], 0))
 	  && ! reload_in_progress)
 	operands[1] = change_address (operands[1], DImode,
 				      XEXP (operands[1], 0));
     }
+
+  if (TARGET_TOC 
+     && GET_CODE (operands[1]) == MEM 
+     && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF)
+    {
+      XEXP (operands[1], 0) = create_TOC_reference (XEXP (operands[1], 0));
+      MEM_ALIAS_SET (operands[1]) = get_TOC_alias_set ();	
+      RTX_UNCHANGING_P (operands[1]) = 1;
+    }
+
 }")
 
 (define_insn "*movdi_32"
@@ -7921,7 +7956,7 @@
 	(match_operand:SI 1 "immediate_operand" "s"))
    (unspec [(match_dup 1) (match_operand 2 "immediate_operand" "s")] 6)]
   "TARGET_ELF && flag_pic == 2"
-  "bl %1\\n\\t.long %2-%1\\n%1:"
+  "bl %1\\n\\t.long %2-%1+4\\n%1:"
   [(set_attr "type" "branch")
    (set_attr "length" "8")])
 
