Replace PROTO with PARAMS
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31874 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-09  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm-protos.h: Replace PROTO with PARAMS.
+
 2000-02-09  Scott Bambrough  <scottb@netwinder.org>
 
         * config/arm/arm.md (movsi): In PIC mode, make sure that a
