--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -25,7 +25,6 @@
 ;; Number	Use
 ;; 0		frsp for POWER machines
 ;; 0/v		blockage
-;; 1/v		nonlocal_goto_receiver for MINIMAL_TOC
 ;; 5		used to tie the stack contents and the stack pointer
 ;; 6		address of a word pointing to the TOC
 ;; 7		address of the TOC (more-or-less)
@@ -11237,6 +11236,10 @@
       operands[2] = r;
     }
 
+#if TARGET_AIX
+    rs6000_emit_eh_toc_restore (operands[1]);
+#endif
+
   emit_insn (gen_eh_reg_restore ());
 
   if (Pmode == SImode)
@@ -11300,6 +11303,7 @@
 (define_insn "return_eh_si"
   [(use (match_operand:SI 0 "register_operand" "l,c"))
    (return)
+   (use (reg:SI 2))
    (use (reg:SI 3))]
   "TARGET_32BIT"
   "@
@@ -11310,6 +11314,7 @@
 (define_insn "return_eh_di"
   [(use (match_operand:DI 0 "register_operand" "l,c"))
    (return)
+   (use (reg:DI 2))
    (use (reg:DI 3))]
   "TARGET_64BIT"
   "@
