* arm.c (find_barrier): Find the last barrier within the allowed range.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31889 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-02-10  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.c (find_barrier): Find the last barrier within the allowed 
+	range.
+
 2000-02-09  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm-protos.h: Replace PROTO with PARAMS.
