* rs6000.c (output_function_profiler): Use .long for a 32-bit quantity, fix profile1.C test failure under -fPIC.
* rs6000.c: Add 'u' to many constants to suppress warnings.
(constant_pool_expr_1): Make static.
(rs6000_emit_eh_toc_restore): Remove unused 'r2'.
* rs6000.h: Add 'u' to many constants to suppress warnings.

* rs6000.c (rs6000_emit_load_toc_table): Use LCTOC..1 under AIX
for the start of the TOC, instead of LCTOC..0.
* aix.h (toc_section): Use LCTOC..1 under AIX for the start
of the TOC.
* rs6000.md (load_toc_aix_si): Use LCTOC..1.
(load_toc_aix_di): Use LCTOC..1.

* rs6000.h (LEGITIMIZE_ADDRESS): Turn into a function.
* rs6000.c (rs6000_legitimize_address): New function from
LEGITIMIZE_ADDRESS.  Only use create_TOC_reference on
symbols in the constant pool that really are TOC references.
(print_operand_address): For ELF, write TOC offsets under
-fPIC as subtractions in the insn.
(output_toc): For ELF, define symbols in TOC as normal labels,
to match RTL.
(create_TOC_reference): Use gen_rtx_PLUS rather than gen_rtx.
* rs6000-protos.h (rs6000_legitimize_address): Prototype.
(create_TOC_reference): Prototype only when RTX_CODE is defined.
* rs6000.md (movsi): Only use create_TOC_reference on
symbols in the constant pool that really are TOC references.

* rs6000.h (MACHINE_DEPENDENT_REORG): Don't define.
* rs6000.c (rs6000_reorg): Delete.
* rs6000-protos.h (rs6000_reorg): Delete.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31940 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -5961,7 +5961,10 @@
 
       operands[1] = force_const_mem (SImode, operands[1]);
 
-      if (TARGET_TOC && CONSTANT_POOL_EXPR_P (XEXP (operands[1], 0)))
+      if (TARGET_TOC 
+	  && CONSTANT_POOL_EXPR_P (XEXP (operands[1], 0))
+	  && ASM_OUTPUT_SPECIAL_POOL_ENTRY_P (get_pool_constant (
+		XEXP (operands[1], 0))))
 	{
 	  XEXP (operands[1], 0) = create_TOC_reference (XEXP (operands[1], 0));
 	  MEM_ALIAS_SET (operands[1]) = get_TOC_alias_set ();	
@@ -5973,15 +5976,6 @@
 	operands[1] = change_address (operands[1], SImode,
 				      XEXP (operands[1], 0));
     }
-  if (TARGET_TOC 
-     && GET_CODE (operands[1]) == MEM 
-     && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF)
-    {
-      XEXP (operands[1], 0) = create_TOC_reference (XEXP (operands[1], 0));
-      MEM_ALIAS_SET (operands[1]) = get_TOC_alias_set ();	
-      RTX_UNCHANGING_P (operands[1]) = 1;
-    }
-
 }")
 
 (define_insn ""
@@ -7902,7 +7896,7 @@
   "*
 {
   char buf[30];
-  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 0);
+  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 1);
   operands[1] = gen_rtx_SYMBOL_REF (Pmode, ggc_alloc_string (buf, -1));
   operands[2] = gen_rtx_REG (Pmode, 2);
   return \"{l|lwz} %0,%1(%2)\";
@@ -7916,7 +7910,7 @@
   "*
 {
   char buf[30];
-  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 0);
+  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 1);
   operands[1] = gen_rtx_SYMBOL_REF (Pmode, ggc_alloc_string (buf, -1));
   operands[2] = gen_rtx_REG (Pmode, 2);
   return \"ld %0,%1(%2)\";
