--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -1966,8 +1966,7 @@
    and %0,%1,%2
    {rlinm|rlwinm} %0,%1,0,%m2,%M2
    {andil.|andi.} %0,%1,%b2
-   {andiu.|andis.} %0,%1,%u2"
-  [(set_attr "length" "4")])
+   {andiu.|andis.} %0,%1,%u2")
 
 ;; Note to set cr's other than cr0 we do the and immediate and then
 ;; the test again -- this avoids a mcrf which on the higher end
@@ -3148,16 +3147,14 @@
   "TARGET_POWER"
   "@
    sle %0,%1,%2
-   {sli|slwi} %0,%1,%h2"
-  [(set_attr "length" "8")])
+   {sli|slwi} %0,%1,%h2")
 
 (define_insn "ashlsi3_no_power"
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
 	(ashift:SI (match_operand:SI 1 "gpc_reg_operand" "r")
 		   (match_operand:SI 2 "reg_or_cint_operand" "ri")))]
   "! TARGET_POWER"
-  "{sl|slw}%I2 %0,%1,%h2"
-  [(set_attr "length" "8")])
+  "{sl|slw}%I2 %0,%1,%h2")
 
 (define_insn ""
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,x")
@@ -5510,12 +5507,12 @@
 (define_expand "iordi3"
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
 	(ior:DI (match_operand:DI 1 "gpc_reg_operand" "")
-		(match_operand:DI 2 "reg_or_cint_operand" "")))]
+		(match_operand:DI 2 "reg_or_u_cint_operand" "")))]
   "TARGET_POWERPC64"
   "
 {
   if (GET_CODE (operands[2]) == CONST_INT
-      && ! logical_operand (operands[2], DImode))
+      && ! logical_u_operand (operands[2], DImode))
     {
       HOST_WIDE_INT value = INTVAL (operands[2]);
       rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
@@ -5526,12 +5523,26 @@
       emit_insn (gen_iordi3 (operands[0], tmp, GEN_INT (value & 0xffff)));
       DONE;
     }
+  else if (GET_CODE (operands[2]) == CONST_DOUBLE
+      && ! logical_u_operand (operands[2], DImode))
+    {
+      HOST_WIDE_INT value = CONST_DOUBLE_LOW (operands[2]);
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
+		 ? operands[0] : gen_reg_rtx (DImode));
+
+      emit_insn (gen_iordi3 (tmp, operands[1],
+			     immed_double_const (value
+						 & (~ (HOST_WIDE_INT) 0xffff),
+					         0, DImode)));
+      emit_insn (gen_iordi3 (operands[0], tmp, GEN_INT (value & 0xffff)));
+      DONE;
+    }
 }")
 
 (define_insn "*iordi3_internal1"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r,r,r")
 	(ior:DI (match_operand:DI 1 "gpc_reg_operand" "%r,r,r")
-		(match_operand:DI 2 "logical_operand" "r,K,J")))]
+		(match_operand:DI 2 "logical_u_operand" "r,K,JF")))]
   "TARGET_POWERPC64"
   "@
    or %0,%1,%2
@@ -5565,25 +5576,36 @@
 (define_split
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
 	(ior:DI (match_operand:DI 1 "gpc_reg_operand" "")
-		(match_operand:DI 2 "non_logical_cint_operand" "")))]
+		(match_operand:DI 2 "non_logical_u_cint_operand" "")))]
   "TARGET_POWERPC64"
   [(set (match_dup 0) (ior:DI (match_dup 1) (match_dup 3)))
    (set (match_dup 0) (ior:DI (match_dup 0) (match_dup 4)))]
 "
 {
-  operands[3] = GEN_INT (INTVAL (operands[2]) & (~ (HOST_WIDE_INT) 0xffff));
-  operands[4] = GEN_INT (INTVAL (operands[2]) & 0xffff);
+  if (GET_CODE (operands[2]) == CONST_DOUBLE)
+    {
+      HOST_WIDE_INT value = CONST_DOUBLE_LOW (operands[2]);
+      operands[3] = immed_double_const (value & (~ (HOST_WIDE_INT) 0xffff),
+					0, DImode);
+      operands[4] = GEN_INT (value & 0xffff);
+    }
+  else
+    {
+      operands[3] = GEN_INT (INTVAL (operands[2])
+			     & (~ (HOST_WIDE_INT) 0xffff));
+      operands[4] = GEN_INT (INTVAL (operands[2]) & 0xffff);
+    }
 }")
 
 (define_expand "xordi3"
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
 	(xor:DI (match_operand:DI 1 "gpc_reg_operand" "")
-		(match_operand:DI 2 "reg_or_cint_operand" "")))]
+		(match_operand:DI 2 "reg_or_u_cint_operand" "")))]
   "TARGET_POWERPC64"
   "
 {
   if (GET_CODE (operands[2]) == CONST_INT
-      && ! logical_operand (operands[2], DImode))
+      && ! logical_u_operand (operands[2], DImode))
     {
       HOST_WIDE_INT value = INTVAL (operands[2]);
       rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
@@ -5594,12 +5616,26 @@
       emit_insn (gen_xordi3 (operands[0], tmp, GEN_INT (value & 0xffff)));
       DONE;
     }
+  else if (GET_CODE (operands[2]) == CONST_DOUBLE
+      && ! logical_u_operand (operands[2], DImode))
+    {
+      HOST_WIDE_INT value = CONST_DOUBLE_LOW (operands[2]);
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
+		 ? operands[0] : gen_reg_rtx (DImode));
+
+      emit_insn (gen_xordi3 (tmp, operands[1],
+			     immed_double_const (value
+						 & (~ (HOST_WIDE_INT) 0xffff),
+					         0, DImode)));
+      emit_insn (gen_xordi3 (operands[0], tmp, GEN_INT (value & 0xffff)));
+      DONE;
+    }
 }")
 
 (define_insn "*xordi3_internal1"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r,r,r")
 	(xor:DI (match_operand:DI 1 "gpc_reg_operand" "%r,r,r")
-		(match_operand:DI 2 "logical_operand" "r,K,J")))]
+		(match_operand:DI 2 "logical_u_operand" "r,K,JF")))]
   "TARGET_POWERPC64"
   "@
    xor %0,%1,%2
@@ -5633,14 +5669,25 @@
 (define_split
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
         (xor:DI (match_operand:DI 1 "gpc_reg_operand" "")
-                (match_operand:DI 2 "non_logical_cint_operand" "")))]
+                (match_operand:DI 2 "non_logical_u_cint_operand" "")))]
   "TARGET_POWERPC64"
   [(set (match_dup 0) (xor:DI (match_dup 1) (match_dup 3)))
    (set (match_dup 0) (xor:DI (match_dup 0) (match_dup 4)))]
 "
 {
-  operands[3] = GEN_INT (INTVAL (operands[2]) & (~ (HOST_WIDE_INT) 0xffff));
-  operands[4] = GEN_INT (INTVAL (operands[2]) & 0xffff);
+  if (GET_CODE (operands[2]) == CONST_DOUBLE)
+    {
+      HOST_WIDE_INT value = CONST_DOUBLE_LOW (operands[2]);
+      operands[3] = immed_double_const (value & (~ (HOST_WIDE_INT) 0xffff),
+					0, DImode);
+      operands[4] = GEN_INT (value & 0xffff);
+    }
+  else
+    {
+      operands[3] = GEN_INT (INTVAL (operands[2])
+			     & (~ (HOST_WIDE_INT) 0xffff));
+      operands[4] = GEN_INT (INTVAL (operands[2]) & 0xffff);
+    }
 }")
 
 (define_insn "*eqvdi3_internal1"
@@ -6801,7 +6848,11 @@
    (set (match_dup 0)
 	(zero_extend:DI (subreg:SI (match_dup 0) 0)))]
   "
-{ operands[2] = GEN_INT ((INTVAL (operands[1]) << 32) >> 32); }")
+{
+#if HOST_BITS_PER_WIDE_INT != 32
+operands[2] = GEN_INT ((INTVAL (operands[1]) << 32) >> 32);
+#endif
+}")
 
 ;; 32-bit value in upper half of doubleword
 (define_split
@@ -6830,7 +6881,11 @@
 	(ashift:DI (match_dup 0)
 		   (const_int 32)))]
   "
-{ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32); }")
+{
+#if HOST_BITS_PER_WIDE_INT != 32
+operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
+#endif
+}")
 
 ;; Generate all one-bits and clear left or right.
 ;; Use (and:DI (rotate:DI ...)) to avoid anddi3 unnecessary clobber.
@@ -6867,13 +6922,14 @@
   if (GET_CODE (operands[1]) == CONST_DOUBLE)
     {
       operands[2] = GEN_INT (CONST_DOUBLE_HIGH (operands[1]));
-      operands[3] = GEN_INT (CONST_DOUBLE_LOW (operands[1]));
+      operands[3] = immed_double_const (CONST_DOUBLE_LOW (operands[1]),
+					0, DImode);
     }
   else
     {
       HOST_WIDE_INT value = INTVAL (operands[1]);
       operands[2] = (value & 0x80000000) ? constm1_rtx : const0_rtx;
-      operands[3] = operands[1];
+      operands[3] = immed_double_const (value, 0, DImode);
     }
 }")
 
@@ -6892,9 +6948,11 @@
 		(match_dup 3)))]
   "
 {
+#if HOST_BITS_PER_WIDE_INT != 32
   HOST_WIDE_INT value = INTVAL (operands[1]);
   operands[2] = GEN_INT (value >> 32);
   operands[3] = GEN_INT ((value & 0x7fffffff) - (value & 0x80000000));
+#endif
 }")
 
 (define_insn ""
@@ -8709,10 +8767,22 @@
 	(eq:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
+{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
   operands[1] = gen_rtx_COMPARE (mode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (mode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_EQ (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 (define_expand "sne"
@@ -8727,6 +8797,14 @@
   operands[1] = gen_rtx_COMPARE (CCFPmode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (CCFPmode);
+
+  if (TARGET_POWERPC64)
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_NE (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 ;; A > 0 is best done using the portable sequence, so fail in that case.
@@ -8736,7 +8814,7 @@
 	(gt:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
+{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
 
   if (! rs6000_compare_fp_p && rs6000_compare_op1 == const0_rtx)
     FAIL;
@@ -8744,6 +8822,18 @@
   operands[1] = gen_rtx_COMPARE (mode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (mode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_GT (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 ;; A < 0 is best done in the portable way for A an integer.
@@ -8753,7 +8843,7 @@
 	(lt:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
+{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
 
   if (! rs6000_compare_fp_p && rs6000_compare_op1 == const0_rtx)
     FAIL;
@@ -8761,6 +8851,18 @@
   operands[1] = gen_rtx_COMPARE (mode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (mode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_LT (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 (define_expand "sge"
@@ -8769,10 +8871,22 @@
 	(ge:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
+{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
   operands[1] = gen_rtx_COMPARE (mode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (mode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_GE (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 ;; A <= 0 is best done the portable way for A an integer.
@@ -8782,7 +8896,7 @@
 	(le:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ enum machine_mode mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
+{ enum machine_mode op_mode, mode = rs6000_compare_fp_p ? CCFPmode : CCmode;
 
   if (! rs6000_compare_fp_p && rs6000_compare_op1 == const0_rtx)
     FAIL;
@@ -8790,6 +8904,18 @@
   operands[1] = gen_rtx_COMPARE (mode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (mode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && (op_mode == DImode || rs6000_compare_fp_p))
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_LE (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 (define_expand "sgtu"
@@ -8798,9 +8924,23 @@
 	(gtu:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
+{ enum machine_mode op_mode;
+
+  operands[1] = gen_rtx_COMPARE (CCUNSmode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (CCUNSmode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && op_mode == DImode)
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_GTU (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 (define_expand "sltu"
@@ -8809,9 +8949,23 @@
 	(ltu:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
+{ enum machine_mode op_mode;
+
+  operands[1] = gen_rtx_COMPARE (CCUNSmode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (CCUNSmode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && op_mode == DImode)
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_LTU (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 (define_expand "sgeu"
@@ -8820,9 +8974,23 @@
 	(geu:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
+{ enum machine_mode op_mode;
+
+  operands[1] = gen_rtx_COMPARE (CCUNSmode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (CCUNSmode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && op_mode == DImode)
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_GEU (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 (define_expand "sleu"
@@ -8831,9 +8999,23 @@
 	(leu:SI (match_dup 2) (const_int 0)))]
   ""
   "
-{ operands[1] = gen_rtx_COMPARE (CCUNSmode,
+{ enum machine_mode op_mode;
+
+  operands[1] = gen_rtx_COMPARE (CCUNSmode,
 				 rs6000_compare_op0, rs6000_compare_op1);
   operands[2] = gen_reg_rtx (CCUNSmode);
+
+  op_mode = GET_MODE (rs6000_compare_op0);
+  if (op_mode == VOIDmode)
+    op_mode = GET_MODE (rs6000_compare_op1);
+
+  if (TARGET_POWERPC64 && op_mode == DImode)
+    {
+      emit_insn (gen_rtx_SET (VOIDmode, operands[2], operands[1]));
+      convert_move (operands[0],
+		    gen_rtx_LEU (DImode, operands[2], const0_rtx), 0);
+      DONE;
+    }
 }")
 
 ;; Here are the actual compare insns.
@@ -8884,7 +9066,7 @@
 (define_insn ""
   [(set (match_operand:CCUNS 0 "cc_reg_operand" "=y")
 	(compare:CCUNS (match_operand:SI 1 "gpc_reg_operand" "r")
-		       (match_operand:SI 2 "reg_or_u_short_operand" "rI")))]
+		       (match_operand:SI 2 "reg_or_u_short_operand" "rK")))]
   ""
   "{cmpl%I2|cmplw%I2} %0,%1,%W2"
   [(set_attr "type" "compare")])
@@ -8892,7 +9074,7 @@
 (define_insn ""
   [(set (match_operand:CCUNS 0 "cc_reg_operand" "=y")
 	(compare:CCUNS (match_operand:DI 1 "gpc_reg_operand" "r")
-		       (match_operand:DI 2 "reg_or_u_short_operand" "rI")))]
+		       (match_operand:DI 2 "reg_or_u_short_operand" "rK")))]
   ""
   "cmpld%I2 %0,%1,%W2"
   [(set_attr "type" "compare")])
@@ -8975,6 +9157,15 @@
   [(set_attr "length" "12")])
 
 (define_insn ""
+  [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
+	(match_operator:DI 1 "scc_comparison_operator"
+			   [(match_operand 2 "cc_reg_operand" "y")
+			    (const_int 0)]))]
+  "TARGET_POWERPC64"
+  "%D1mfcr %0\;{rlinm|rlwinm} %0,%0,%J1,1"
+  [(set_attr "length" "12")])
+
+(define_insn ""
   [(set (match_operand:CC 0 "cc_reg_operand" "=x")
 	(compare:CC (match_operator:SI 1 "scc_comparison_operator"
 				       [(match_operand 2 "cc_reg_operand" "y")
@@ -9013,6 +9204,31 @@
  [(set_attr "length" "12")])
 
 (define_insn ""
+  [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
+	(ashift:DI (match_operator:DI 1 "scc_comparison_operator"
+				      [(match_operand 2 "cc_reg_operand" "y")
+				       (const_int 0)])
+		   (match_operand:DI 3 "const_int_operand" "n")))]
+  "TARGET_POWERPC64"
+  "*
+{
+  int is_bit = ccr_bit (operands[1], 1);
+  int put_bit = 31 - (INTVAL (operands[3]) & 31);
+  int count;
+
+  if (is_bit >= put_bit)
+    count = is_bit - put_bit;
+  else
+    count = 32 - (put_bit - is_bit);
+
+  operands[4] = GEN_INT (count);
+  operands[5] = GEN_INT (put_bit);
+
+  return \"%D1mfcr %0\;{rlinm|rlwinm} %0,%0,%4,%5,%5\";
+}"
+ [(set_attr "length" "12")])
+
+(define_insn ""
   [(set (match_operand:CC 0 "cc_reg_operand" "=x")
 	(compare:CC
 	 (ashift:SI (match_operator:SI 1 "scc_comparison_operator"
@@ -9023,7 +9239,7 @@
    (set (match_operand:SI 4 "gpc_reg_operand" "=r")
 	(ashift:SI (match_op_dup 1 [(match_dup 2) (const_int 0)])
 		   (match_dup 3)))]
-  ""
+  "! TARGET_POWERPC64"
   "*
 {
   int is_bit = ccr_bit (operands[1], 1);
@@ -9088,6 +9304,19 @@
 			   [(match_operand 5 "cc_reg_operand" "y")
 			    (const_int 0)]))]
    "REGNO (operands[2]) != REGNO (operands[5])"
+   "%D1%D4mfcr %3\;{rlinm|rlwinm} %0,%3,%J1,1\;{rlinm|rlwinm} %3,%3,%J4,1"
+   [(set_attr "length" "20")])
+
+(define_peephole
+  [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
+	(match_operator:DI 1 "scc_comparison_operator"
+			   [(match_operand 2 "cc_reg_operand" "y")
+			    (const_int 0)]))
+   (set (match_operand:DI 3 "gpc_reg_operand" "=r")
+	(match_operator:DI 4 "scc_comparison_operator"
+			   [(match_operand 5 "cc_reg_operand" "y")
+			    (const_int 0)]))]
+   "TARGET_POWERPC64 && REGNO (operands[2]) != REGNO (operands[5])"
    "%D1%D4mfcr %3\;{rlinm|rlwinm} %0,%3,%J1,1\;{rlinm|rlwinm} %3,%3,%J4,1"
    [(set_attr "length" "20")])
 
@@ -9261,7 +9490,7 @@
 	(lshiftrt:SI (neg:SI (abs:SI (match_operand:SI 1 "gpc_reg_operand" "r")))
 		     (const_int 31)))
    (clobber (match_scratch:SI 2 "=&r"))]
-  "! TARGET_POWER"
+  "! TARGET_POWER && ! TARGET_POWERPC64"
   "{ai|addic} %2,%1,-1\;{sfe|subfe} %0,%2,%1"
   [(set_attr "length" "8")])
 
@@ -9738,6 +9967,22 @@
    [(set_attr "length" "12")])
 
 (define_insn ""
+  [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
+	(ge:SI (match_operand:SI 1 "gpc_reg_operand" "r")
+	       (const_int 0)))]
+  "! TARGET_POWER && ! TARGET_POWERPC64"
+  "nand %0,%1,%1\;{sri|srwi} %0,%0,31"
+   [(set_attr "length" "8")])
+
+(define_insn ""
+  [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
+	(ge:DI (match_operand:DI 1 "gpc_reg_operand" "r")
+	       (const_int 0)))]
+  "TARGET_POWERPC64"
+  "nand %0,%1,%1\;srdi %0,%0,63"
+   [(set_attr "length" "8")])
+
+(define_insn ""
   [(set (match_operand:CC 4 "cc_reg_operand" "=x")
 	(compare:CC
 	 (ge:SI (match_operand:SI 1 "gpc_reg_operand" "r")
@@ -9750,6 +9995,32 @@
   "doz%I2 %3,%1,%2\;{sfi|subfic} %0,%3,0\;{ae.|adde.} %0,%0,%3"
   [(set_attr "type" "compare")
    (set_attr "length" "12")])
+
+(define_insn ""
+  [(set (match_operand:CC 4 "cc_reg_operand" "=x")
+	(compare:CC
+	 (ge:SI (match_operand:SI 1 "gpc_reg_operand" "r")
+		(const_int 0))
+	 (const_int 0)))
+   (set (match_operand:SI 0 "gpc_reg_operand" "=r")
+	(ge:SI (match_dup 1) (const_int 0)))]
+  "! TARGET_POWER"
+  "nand %0,%1,%1\;{sri.|srwi.} %0,%0,31"
+  [(set_attr "type" "compare")
+   (set_attr "length" "8")])
+
+(define_insn ""
+  [(set (match_operand:CC 4 "cc_reg_operand" "=x")
+	(compare:CC
+	 (ge:DI (match_operand:DI 1 "gpc_reg_operand" "r")
+		(const_int 0))
+	 (const_int 0)))
+   (set (match_operand:DI 0 "gpc_reg_operand" "=r")
+	(ge:DI (match_dup 1) (const_int 0)))]
+  "TARGET_POWERPC64"
+  "nand %0,%1,%1\;srdi. %0,%0,63"
+  [(set_attr "type" "compare")
+   (set_attr "length" "8")])
 
 (define_insn ""
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
